@@ -1,4 +1,5 @@
 
+	* fix torrent_status::next_announce
 	* fix pad-file scalability issue
 	* made coalesce_reads/coalesce_writes settings take effect on linux and windows
 	* restore support for incoming connections over SOCKS5 (disabled by default)
